k8s/namespace-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rednorte-staging
  labels:
    name: rednorte-staging
    environment: staging
